--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>HikariCP</artifactId>
             <version>2.4.1</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.21.0-GA</version>
+		</dependency>
 	</dependencies>
 
 	<build>
