--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,11 @@
 app.username=admin
 app.password=admin
+
+jdbc.driverClass = com.mysql.jdbc.Driver
+jdbc.url = jdbc\:mysql\://localhost:33352/rps?useUnicode\=true&characterEncoding\=utf8
+jdbc.user = root
+jdbc.password = root
+jdbc.pool.type = HikariCP
+
+
+com.blade.logger.defaultLogLevel=debug
